# crypto-autonomous-portfolio-management

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
db/scripts/: export_parquet.py
docs/conclusion/: conclusion[tr].md  result[tr].md
docs/crypto_research/: research[tr].md
docs/findings/: findings[tr].md
docs/hld/: hld.drawio
docs/implementation_design/: design.md
docs/project_timeline/: timeline[tr].md
docs/requirements/: requirements_analysis.md
experiments/configs/: compare_deep_learning.example.json  compare_tabular_production.example.json  full_gru_btcusdt_1m_15m.json  full_lstm_btcusdt_1m_15m.json  full_tabular_compare_btcusdt_1m_15m.json  lightgbm_parameter_playground_btcusdt_1m_15m.json  lstm_parameter_playground_btcusdt_1m_15m.json  quick_tabular_smoke_btcusdt_1m_15m.json  recent_arima_btcusdt_1m_15m.json  recent_prophet_btcusdt_1m_15m.json  train_gru_full_btcusdt.example.json  train_gru_production.example.json  train_lstm_full_btcusdt.example.json  train_lstm_production.example.json  train_xgboost_production.example.json  walk_forward_arima.example.json  walk_forward_arima_recent_baseline.json  walk_forward_prophet_recent_baseline.json  walk_forward_xgboost.example.json  xgboost_parameter_playground_btcusdt_1m_15m.json
experiments/notebooks/: colab_parquet_training.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css
src/capm/: __init__.py  example_indicators.py  example_indicators_cli.py  example_ingestion.py  init_db.py  main.py  predict_worker.py
tests/: __init__.py
tests/unit/: __init__.py  test_backtrader_runner.py  test_binance_dump_ingestion.py  test_binance_spot_adapter.py  test_binance_spot_demo_adapter.py  test_dashboard_api.py  test_dashboard_service.py  test_experiment_runner.py  test_experiment_walk_forward.py  test_historical_ingestion.py  test_indicator_module.py  test_init_db.py  test_live_cycle.py  test_llm_decision_policy.py  test_main_cli.py  test_market_data_domain.py  test_model_registry.py  test_operational_risk.py  test_settings.py  (+8 more)
(+115 files in other folders)
