[project]
name = "capm"
version = "0.1.0"
description = "Crypto Autonomous Portfolio Management System"
readme = "README.md"
authors = [
    { name = "Ahmet Servet Polat", email = "ahmetservet04@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.0",
    "scikit-learn>=1.8.0",
    "uvicorn",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
ml = [
    "lightgbm",
    "numpy",
    "pandas",
    "prophet",
    "statsmodels",
    "xgboost",
]
notebooks = [
    "ipykernel",
    "jupyter",
]
backtest = [
    "backtrader",
    "pandas",
]
deep-learning = [
    "numpy",
    "pandas",
    "torch",
]

[project.scripts]
capm = "capm:main"
capm-api = "capm.api.app:main"
capm-experiment-walkforward = "capm.experiments.walk_forward:main"
capm-train-production = "capm.experiments.train_production:main"
capm-train-deep-learning = "capm.experiments.train_deep_learning:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
